--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,11 @@
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-package-mode = false
-
-[tool.poetry.dependencies]
-python = "^3.8.1,<3.13"
-ipython = ">=8.0.0"
-matplotlib = "^3.7.2"
-notebook = "^6.5.6"
-numpy = "^1.20.3"
-pandas = ">=1.3.5,<3.0.0"
+[project]
+name = "python_tutorial"
+version = "0.1.0"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = [
+    "matplotlib >=3.7.2",
+    "notebook ~=6.5",
+    "numpy >=1.20.3",
+    "pandas >=1.3.5,<3",
+]
