--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ requires-python = ">=3.10"
 dependencies = [
     "matplotlib >=3.7.2",
     "notebook ~=6.5",
-    "numpy >=1.20.3",
+    "numpy >=1.20.3,<2",
     "pandas >=1.3.5,<3",
 ]
